--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -25,11 +25,11 @@
             <a class="nav-link" href="#">Gallery</a>
             <a class="nav-link" href="#">Inquire</a>
           </div>
-          <div><a class="nav-link" href="#">Book</a></div>
         </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup"><a class="nav-link, btn btn-info" href="#">Book</a></div>
       </div>
     </nav>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
