--- a/index.html
+++ b/index.html
@@ -11,33 +11,56 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid navbarcolor">
         <a class="navbar-brand text-white" href="#">Take-Tu-Productions</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navposition" id="navbarNavAltMarkup">
-          <div class="navbar-nav ">
-            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+        <div
+          class="collapse navbar-collapse navposition"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link active text-white" aria-current="page" href="#"
+              >Home</a
+            >
             <a class="nav-link text-white" href="#">Gallery</a>
             <a class="nav-link text-white" href="#">Socials</a>
           </div>
         </div>
-        <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup"><a class="nav-link, text-white btn btn-info" href="#">Book</a></div>
+        <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup">
+          <a class="nav-link, text-white btn btn-info" href="#">Book</a>
+        </div>
       </div>
     </nav>
     <div class="card mb-3">
-      <img src="..." class="card-img-top" alt="...">
+      <img
+        src="/images/water.jpeg"
+        class="card-img-top"
+        alt="Man standing in water"
+      />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">Create Your Experience</h5>
+        <p class="card-text">
+          Pictures are memories in the making. Let me help you capture them.
+        </p>
+        <div class="bookbtn">
+          <button type="button" class="btn btn-info text-white">Book</button>
+        </div>
       </div>
     </div>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
