--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
     </nav>
-    <div class="card mb-3">
+    <div class="card mb-3 card-adjustment">
       <img
         src="/images/water.jpeg"
         class="card-img-top"
@@ -60,7 +60,30 @@
         </div>
       </div>
     </div>
-    
+    <div>
+      <h5 class="text-center">Experiences</h1>
+    <div id="carouselExampleRide" class="carousel slide carousel-fade picture-adjustment" data-bs-ride="true">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/images/cover.JPG" class="d-block w-100" alt="Woman with hand reaching out">
+        </div>
+        <div class="carousel-item">
+          <img src="/images/brew looking up.png" class="d-block w-100" alt="Little dog in hoodie">
+        </div>
+        <div class="carousel-item">
+          <img src="/images/FINSH-2.jpg" class="d-block w-100" alt="Woman flipping hair">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
