added socials sections along with images and links to the socials

--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
       </button>
     </div>
   </div>
+  <div>
+    <h5 class="text-center">Socials</h1>
+    <div class="container social-logo">
+      <div class="row">
+        <div class="col">
+          <a href="https://www.instagram.com" target="_blank">
+          <img src="/images/instapng.png" class="d-block w-100 hovering" alt="Instagram logo">
+        </a>
+        </div>
+        <div class="col">
+          <a href="https://www.facebook.com" target="_blank">
+          <img src="/images/facebookpng.png" class="d-block w-100 hovering" alt="Facebook logo">
+        </a>
+        </div>
+        <div class="col">
+          <a href="https://www.linkedin.com" target="_blank">
+          <img src="/images/linkedinPng.png" class="d-block w-100 hovering" alt="Linkedin logo">
+        </a>
+        </div>
+      </div>
+  </div>     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
