adjusted footer and added booking botton to footer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
         </a>
         </div>
       </div>
-  </div>     
+  </div>   
+    <footer class="footer">
+      <div class="container-fluid navbarcolor text-center footeradj">
+        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+        <a class="nav-link text-white galla" href="#">Gallery</a>
+        <a class="nav-link text-white" href="#">Socials</a>
+        <a class="nav-link, text-white btn btn-info" href="#">Book</a>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
