customized gallery with pictures

--- a/Gallery.html
+++ b/Gallery.html
@@ -44,12 +44,11 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid row col-12">
-        <div class="row">
-          <div class="col">
+      <div class="container-fluid">
             <h1 class="text-center">Gallery</h1>
             </div>
           </div>
+    <div class="container-fluid galla row row-cols-1 row-cols-md-3 g-4">
       <img src="/images/kim.jpg" class="img-fluid" alt="portrait">
       <img src="/images/cover.JPG" class="img-fluid" alt="hand reaching">
       <img src="/images/brew looking up.png" class="img-fluid" alt="Dog">
