Linked all pages together

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link active text-white" aria-current="page" href="#"
+            <a class="nav-link active text-white" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link text-white" href="#">Gallery</a>
-            <a class="nav-link text-white" href="#">Socials</a>
+            <a class="nav-link text-white" href="Gallery.html">Gallery</a>
+            <a class="nav-link text-white" href="#Socials">Socials</a>
           </div>
         </div>
         <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup">
-          <a class="nav-link, text-white btn btn-info" href="#">Book</a>
+          <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
         </div>
       </div>
     </nav>
@@ -56,7 +56,7 @@
           Pictures are memories in the making. Let me help you capture them.
         </p>
         <div class="bookbtn">
-          <button type="button" class="btn btn-info text-white">Book</button>
+          <a href="Book.html"><button type="button" class="btn btn-info text-white">Book</button></a>
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
   </div>
   <div>
     <h5 class="text-center">Socials</h1>
-    <div class="container social-logo">
+    <div id="Socials" class="container social-logo">
       <div class="row">
         <div class="col">
           <a href="https://www.instagram.com" target="_blank">
@@ -107,10 +107,10 @@
   </div>   
     <footer class="footer">
       <div class="container-fluid navbarcolor text-center footeradj">
-        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-        <a class="nav-link text-white galla" href="#">Gallery</a>
-        <a class="nav-link text-white" href="#">Socials</a>
-        <a class="nav-link, text-white btn btn-info" href="#">Book</a>
+        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
+        <a class="nav-link text-white" href="#Socials">Socials</a>
+        <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
