--- a/Book.html
+++ b/Book.html
@@ -32,15 +32,15 @@
             id="navbarNavAltMarkup"
           >
             <div class="navbar-nav">
-              <a class="nav-link active text-white" aria-current="page" href="#"
+              <a class="nav-link active text-white" aria-current="page" href="index.html"
                 >Home</a
               >
-              <a class="nav-link text-white" href="#">Gallery</a>
-              <a class="nav-link text-white" href="#">Socials</a>
+              <a class="nav-link text-white" href="Gallery.html">Gallery</a>
+              <a class="nav-link text-white" href="#Socials">Socials</a>
             </div>
           </div>
           <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup">
-            <a class="nav-link, text-white btn btn-info" href="#">Book</a>
+            <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
           </div>
         </div>
       </nav>
@@ -80,10 +80,10 @@
     
       <footer class="footer">
         <div class="container-fluid navbarcolor text-center footeradj">
-          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-          <a class="nav-link text-white galla" href="#">Gallery</a>
-          <a class="nav-link text-white" href="#">Socials</a>
-          <a class="nav-link, text-white btn btn-info" href="#">Book</a>
+          <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
+          <a class="nav-link text-white" href="#Socials">Socials</a>
+          <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
         </div> 
      <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
