linked socials to the correct location

--- a/Book.html
+++ b/Book.html
@@ -36,7 +36,7 @@
                 >Home</a
               >
               <a class="nav-link text-white" href="Gallery.html">Gallery</a>
-              <a class="nav-link text-white" href="#Socials">Socials</a>
+              <a class="nav-link text-white" href="index.html#Socials">Socials</a>
             </div>
           </div>
           <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup">
@@ -82,7 +82,7 @@
         <div class="container-fluid navbarcolor text-center footeradj">
           <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
           <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
-          <a class="nav-link text-white" href="#Socials">Socials</a>
+          <a class="nav-link text-white" href="index.html#Socials">Socials</a>
           <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
         </div> 
      <script
