--- a/Gallery.html
+++ b/Gallery.html
@@ -36,7 +36,7 @@
                 >Home</a
               >
               <a class="nav-link text-white" href="Gallery.html">Gallery</a>
-              <a class="nav-link text-white" href="#Socials">Socials</a>
+              <a class="nav-link text-white" href="index.html#Socials">Socials</a>
             </div>
           </div>
           <div class="collapse navbar-collapse bookbtn" id="navbarNavAltMarkup">
@@ -71,7 +71,7 @@
         <div class="container-fluid navbarcolor text-center footeradj">
           <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
           <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
-          <a class="nav-link text-white" href="#Socials">Socials</a>
+          <a class="nav-link text-white" href="index.html#Socials">Socials</a>
           <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
