cleaned and validated code. set up formspree

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </button>
         <div
           class="collapse navbar-collapse navposition"
-          id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
             <a class="nav-link active text-white" aria-current="page" href="index.html"
@@ -56,19 +55,19 @@
           Pictures are memories in the making. Let me help you capture them.
         </p>
         <div class="bookbtn">
-          <a href="Book.html"><button type="button" class="btn btn-info text-white">Book</button></a>
+          <a href="Book.html" class="btn btn-info text-white">Book</a>
         </div>
       </div>
     </div>
     <div>
-      <h5 class="text-center">Experiences</h1>
+      <h5 class="text-center">Experiences</h5>
     <div id="carouselExampleRide" class="carousel slide carousel-fade picture-adjustment" data-bs-ride="true">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="/images/cover.JPG" class="d-block w-100" alt="Woman with hand reaching out">
         </div>
         <div class="carousel-item">
-          <img src="/images/brew looking up.png" class="d-block w-100" alt="Little dog in hoodie">
+          <img src="/images/brew.png" class="d-block w-100" alt="Little dog in hoodie">
         </div>
         <div class="carousel-item">
           <img src="/images/FINSH-2.jpg" class="d-block w-100" alt="Woman flipping hair">
@@ -84,8 +83,7 @@
       </button>
     </div>
   </div>
-  <div>
-    <h5 class="text-center">Socials</h1>
+    <h5 class="text-center">Socials</h5>
     <div id="Socials" class="container social-logo">
       <div class="row">
         <div class="col">
@@ -111,10 +109,11 @@
         <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
         <a class="nav-link text-white" href="#Socials">Socials</a>
         <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
-    <script
+      </div>
+     </footer>
+     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"></script>
+   </body>
 </html>
