--- a/Book.html
+++ b/Book.html
@@ -29,7 +29,7 @@
           </button>
           <div
             class="collapse navbar-collapse navposition"
-            id="navbarNavAltMarkup"
+            
           >
             <div class="navbar-nav">
               <a class="nav-link active text-white" aria-current="page" href="index.html"
@@ -48,32 +48,32 @@
         <h1 class="text-center">Booking</h1>
         </div>
 <div class="container-fluid" id="formstuff">
-    <form action="submit" class="container">
+    <form action="https://formspree.io/f/meoeewgy" method="POST" class="container">
   
       <div class="form-group">
-          <label for="name" aria-required="true">Name</label>
-          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter your name">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter your name" required>
         </div>
         <div class="form-group">
-          <label for="email" aria-required="true">Email</label>
-          <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter your email">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter your email" required>
         </div>
         <div class="form-group">
-          <label for="phone" aria-required="true">Phone Number</label>
-          <input type="tel" class="form-control" id="phone" aria-describedby="phone" placeholder="Enter your phone number">
+          <label for="phone">Phone Number</label>
+          <input type="tel" class="form-control" id="phone" aria-describedby="phone" placeholder="Enter your phone number" required>
         </div>
         <div class="form-group"></div>
 
         <div><h4>Choose your Experience</h4></div>
         
           <div id="checkboxes">
-          <input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-portrait" autocomplete="off">
+          <input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-portrait">
 <label class="btn btn-outline-primary" for="btn-check-outlined-portrait">Portrait</label>
 
-<input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-fashion" autocomplete="off">
+<input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-fashion">
 <label class="btn btn-outline-primary" for="btn-check-outlined-fashion">Fashion</label>
 
-<input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-custom" autocomplete="off">
+<input type="radio" name="yourexp" class="btn-check" id="btn-check-outlined-custom">
 <label class="btn btn-outline-primary" for="btn-check-outlined-custom">Custom</label>
 </div>
           <div>
@@ -93,6 +93,7 @@
           <a class="nav-link text-white" href="index.html#Socials">Socials</a>
           <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
         </div> 
+      </footer>
      <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
