--- a/Gallery.html
+++ b/Gallery.html
@@ -29,7 +29,7 @@
           </button>
           <div
             class="collapse navbar-collapse navposition"
-            id="navbarNavAltMarkup"
+            
           >
             <div class="navbar-nav">
               <a class="nav-link active text-white" aria-current="page" href="index.html"
@@ -47,11 +47,11 @@
       <div class="container-fluid">
             <h1 class="text-center">Gallery</h1>
             </div>
-          </div>
+          
     <div class="container-fluid galla row row-cols-1 row-cols-md-3 g-4">
       <img src="/images/kim.jpg" class="img-fluid" alt="portrait">
       <img src="/images/cover.JPG" class="img-fluid" alt="hand reaching">
-      <img src="/images/brew looking up.png" class="img-fluid" alt="Dog">
+      <img src="/images/brew.png" class="img-fluid" alt="Dog">
       <img src="/images/combined.jpg" class="img-fluid" alt="car">
       <img src="/images/ivillage.jpg" class="img-fluid" alt="group photo">
       <img src="/images/jr.png" class="img-fluid" alt="man in hat">
@@ -73,6 +73,8 @@
           <a class="nav-link text-white galla" href="Gallery.html">Gallery</a>
           <a class="nav-link text-white" href="index.html#Socials">Socials</a>
           <a class="nav-link, text-white btn btn-info" href="Book.html">Book</a>
+        </div>
+      </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
