updated read me and fixed nav bar links not appearing in mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
+        <div id="navbarNavAltMarkup"
           class="collapse navbar-collapse navposition"
         >
           <div class="navbar-nav">
