--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid navbarcolor">
-        <a class="navbar-brand text-white" href="#">Take-Tu-Productions</a>
+        <a class="navbar-brand text-white" href="index.html">Take-Tu-Productions</a>
         <button
           class="navbar-toggler"
           type="button"
